Primeiras telas do menu

--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -37,7 +37,7 @@
           <ion-input type="password" placeholder="Digite sua senha"></ion-input>
         </ion-item>
 
-        <ion-col col-12 class="buttonEnter">
+        <ion-col col-12 class="buttonEnter" [navPush]="menuPage">
           <button ion-button block>
           Entrar
         </button>
