--- a/src/pages/orbit/orbit.html
+++ b/src/pages/orbit/orbit.html
@@ -1,20 +1,14 @@
 <ion-header>
-  <ion-navbar>
-    <button ion-button menuToggle>
+    <ion-navbar>
+        <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
-    <ion-title>
-      <img src="assets/images/logo_header.png" />
-    </ion-title>
-  </ion-navbar>
+        <ion-title>
+            <img src="assets/images/logo_header.png" />
+        </ion-title>
+    </ion-navbar>
 </ion-header>
 
 <ion-content padding>
-  <h3>IonicDDD Menu Starter</h3>
-
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will show you the way.
-  </p>
-
-  <button ion-button secondary [navPush]="inviteFriendsPage">Toggle Menu</button>
+    <h3>Em desenvolvimento </h3>
 </ion-content>
