--- a/src/pages/tab-home/tab-home.html
+++ b/src/pages/tab-home/tab-home.html
@@ -1,5 +1,5 @@
 <ion-header>
-    <ion-navbar>
+    <ion-navbar color="grey">
         <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
@@ -32,7 +32,7 @@
 
     <ion-row>
         <ion-list class="list_options">
-            <ion-item>
+            <ion-item [navPush]="choosePaymentPage">
                 <ion-thumbnail item-start>
                     <img src="assets/images/icons/cel.jpg">
                 </ion-thumbnail>
